# rorwcfg

./: LICENSE  README.md  pyproject.toml
src/rorwcfg/: __init__.py  rorwcfg.py  rorwfile.py
tests/: test.py
